DOC :Update to Dark Mode issues

--- a/doc/source/_static/css/getting_started.css
+++ b/doc/source/_static/css/getting_started.css
@@ -241,6 +241,7 @@ ul.task-bullet > li > p:first-child {
 
 .tutorial-card .card-body {
   background-color: #F0F0F0;
+  background-color: transparent;
 }
 
 .tutorial-card .badge {
